# agent-wiki

./: .gitignore  AGENT-WIKI-SPEC-v1.md  AGENT-WIKI-SPEC-v2.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  INBOX.md  INITIALIZE.md  ONBOARD.md  README.md  WIKI.md  handoff.md  index.md  package-lock.json  package.json  pyproject.toml
.agents/: README.md
.codex/: README.md
_docs/: DIRECTORY_STRUCTURE.md
_inbox/: example-inbox.md  example-pointer.md
_procedures/: compile-wiki.md
_system/: README.md  config.example.json
_system/scripts/: create-page.py  index.py  log.py  onboard.py  (+1 more)
_wiki/: compile-wiki.md  compile.py
agent_wiki/: README.md  __init__.py  cli.py  config.py  lifecycle.py  workspace.py
claims/: example-claim.md
concepts/: example-concept.md
decisions/: example-decision.md
entities/: example-entity.md
procedures/: example-procedure.md
questions/: example-question.md
reports/: README.md  claim-health.md  contradictions.md  evidence-gaps.md  example-report.md  low-confidence.md  open-questions.md  orphaned-claims.md  stale-pages.md
skills/: README.md
sources/: example-source.md
src/: catalog.ts  cli.ts  compile.ts  config.ts  lifecycle.ts  migrate.ts  onboard.ts  page.ts  registry.ts  schedule-prompts.ts  upgrade.ts  wiki-utils.ts  workspace.ts
syntheses/: example-synthesis.md
tests/: README.md  compile-parity.test.ts  e2e_smoke.py  lifecycle.test.ts  migrate.test.ts  onboard.test.ts  package-dogfood.test.ts  registry.test.ts  schedule-prompts.test.ts  test_lifecycle.py  test_onboard.py  test_workspace.py  workspace.test.ts
(+36 files in other folders)
