[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-wiki"
version = "0.1.0"
description = "Obsidian-compatible evidence-aware wiki tooling for agents."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
agent-wiki = "agent_wiki.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_wiki*"]
